# electrical-grid-simulator

./: .gitignore  LICENSE  README.md  README_PyPI.md  pyproject.toml
src/electricalsim/: Electrical_Grid_Simulator.py  __init__.py  config.ini  egs_create_shortcut.py  egs_run.py  version.py
src/electricalsim/NodeGraphQt6/: __init__.py  constants.py  pkg_info.py
src/electricalsim/NodeGraphQt6/base/: commands.py  factory.py  graph.py  menu.py  model.py  node.py  port.py
src/electricalsim/NodeGraphQt6/custom_widgets/: nodes_palette.py  nodes_tree.py
src/electricalsim/NodeGraphQt6/custom_widgets/properties_bin/: custom_widget_color_picker.py  custom_widget_file_paths.py  custom_widget_slider.py  custom_widget_value_edit.py  custom_widget_vectors.py  node_property_factory.py  node_property_widgets.py  prop_widgets_abstract.py  prop_widgets_base.py
src/electricalsim/NodeGraphQt6/nodes/: backdrop_node.py  base_node.py  base_node_circle.py  group_node.py  port_node.py
src/electricalsim/NodeGraphQt6/qgraphics/: node_abstract.py  node_backdrop.py  node_base.py  node_circle.py  node_group.py  node_overlay_disabled.py  node_port_in.py  node_port_out.py  node_text_item.py  pipe.py  port.py  slicer.py
src/electricalsim/NodeGraphQt6/widgets/: actions.py  dialogs.py  node_graph.py  node_widgets.py  scene.py  tab_search.py  viewer.py  viewer_nav.py
src/electricalsim/extensions/: extension_classes.py
src/electricalsim/hotkeys/: hotkey_functions.py  hotkeys.json
src/electricalsim/icons/: icon_resources.qrc  rc_icons.py
src/electricalsim/lib/: auxiliary.py  calculations.py  electricalGraph.py  main_components.py  table_widget.py
src/electricalsim/qdarktheme2/: __init__.py  _main.py  _proxy_style.py  _style_loader.py  _util.py
src/electricalsim/qdarktheme2/_icon/: icon_engine.py  svg.py
src/electricalsim/qdarktheme2/_os_appearance/: __init__.py  listener.py
src/electricalsim/qdarktheme2/_os_appearance/_accent/: __init__.py
src/electricalsim/qdarktheme2/_resources/: __init__.py  palette.py  standard_icons.py
src/electricalsim/qdarktheme2/_template/: engine.py  filter.py
src/electricalsim/qdarktheme2/qtpy/: __init__.py  qt_version.py
src/electricalsim/qdarktheme2/qtpy/QtCore/: __init__.py
src/electricalsim/qdarktheme2/qtpy/QtGui/: __init__.py
src/electricalsim/qdarktheme2/qtpy/QtSvg/: __init__.py
src/electricalsim/qdarktheme2/qtpy/QtWidgets/: __init__.py
src/electricalsim/qdarktheme2/widget_gallery/: __init__.py  __main__.py  main_window.py
src/electricalsim/qdarktheme2/widget_gallery/_ui/: dock_ui.py  frame_ui.py  icons_ui.py  mdi_ui.py  widgets_ui.py
src/electricalsim/ui/: about_dialog.ui  aload_dialog.ui  asgen_dialog.ui  bus_dialog.ui  choose_bus_switch.ui  choose_facts_type.ui  choose_generator_type.ui  choose_line_type.ui  choose_load_type.ui  choose_transformer_type.ui  connecting_buses_dialog.ui  dcline_dialog.ui  dialogs.py  export_dialog.ui  ext_grid_dialog.ui  extension.ui  gen_dialog.ui  impedance_dialog.ui  line_dialog.ui  load_dialog.ui  main_window.ui  main_window_backup.ui  motor_dialog.ui  network_settings_dialog.ui  pf_settings_widget.ui  power_flow_dialog.ui  search_node_dialog.ui  settings_dialog.ui  sgen_dialog.ui  shunt_dialog.ui  ssc_dialog.ui  stdline_dialog.ui  stdtransformer3w_dialog.ui  stdtransformer_dialog.ui  storage_dialog.ui  svc_dialog.ui  switch_dialog.ui  tcsc_dialog.ui  transformer3w_dialog.ui  transformer_dialog.ui  (+3 more)
