[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "electricalsim"
version = "0.0.8.8"
author = "Dr. Ing. Ariel S. Loyarte"
authors = [
  { name="Dr. Ing. Ariel S. Loyarte", email="aloyarte@frsf.utn.edu.ar" },
]
description = "Graphical user interface for simulating electrical networks based on the pandapower library"
readme = "README_PyPI.md"
requires-python = ">=3.8,<3.12"
dependencies = [
  "PySide6>=6.6.1",
  "pandapower>=2.14.7",
  "numba>=0.56.4",
  "pyqtdarktheme>=2.1.0",
  "qtawesome>=1.2.2",
  "pynput>=1.7.6",
  "lightsim2grid>=0.7.1",
  "matplotlib>=3.6.0",
  "platformdirs>=3.0.0",
  "pyshortcuts>=1.8.3",
  "importlib_metadata>=4.11.3",
  "fuzzysearch>=0.7.3",
  "Grid2Op>=1.9.7",
  "pyarrow>=15.0.0",
  "qtpy>=2.4.1",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = ["electrical networks", "simulation", "energy", "power systems"]
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/aloytag/electrical-grid-simulator"
"Bug Tracker" = "https://github.com/aloytag/electrical-grid-simulator/issues"
"Repository" = "https://github.com/aloytag/electrical-grid-simulator"

[project.scripts]
egs-create-shortcut = "electricalsim.egs_create_shortcut:create_shortcut"

[project.gui-scripts]
egs = "electricalsim.Electrical_Grid_Simulator:main"
